--- a/CPP03/ex03/Makefile
+++ b/CPP03/ex03/Makefile
@@ -1,6 +1,6 @@
-NAME = scav
+NAME = diamond
 
-SRC = main.cpp ClapTrap.cpp ScavTrap.cpp
+SRC = main.cpp ClapTrap.cpp  ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
