CPP06 ex00 testing

--- a/CPP06/Makefile
+++ b/CPP06/Makefile
@@ -1,5 +1,5 @@
 NAME = scalar
-SRC = ScalarConverter.cpp
+SRC = ScalarConverter.cpp main.cpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
