--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "*.tpp": "cpp"
     }
 }
