--- a/CPP09/ex01/Makefile
+++ b/CPP09/ex01/Makefile
@@ -1,5 +1,5 @@
-NAME = btc
-SRC = main.cpp BitcoinExchange.cpp
+NAME = RPN
+SRC = main.cpp RPN.cpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror
