makefile flags updated

--- a/CPP09/ex00/Makefile
+++ b/CPP09/ex00/Makefile
@@ -2,7 +2,7 @@ NAME = btc
 SRC = main.cpp BitcoinExchange.cpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all : $(NAME)
 
