--- a/CPP09/ex01/Makefile
+++ b/CPP09/ex01/Makefile
@@ -2,7 +2,7 @@ NAME = RPN
 SRC = main.cpp RPN.cpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all : $(NAME)
 
