--- a/CPP09/ex02/Makefile
+++ b/CPP09/ex02/Makefile
@@ -1,5 +1,5 @@
 NAME = PmergeMe
-SRC = main.cpp PmergeMe.cpp SortAlgo.cpp
+SRC = main.cpp PmergeMe.cpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
